fixed overflow issues in quotebox

--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   text-align: center;
 }
 
-.App, html{
+.App, html, body{
   background-color: var(--dark-color);
 }
 
@@ -16,7 +16,7 @@
   margin: 20vh auto;
   text-align: left;
   background-color: var(--light-color);
-  padding: 4rem;
+  padding: 1rem;
   width: 50vw;
   max-width: 800px;
   font-size: 1.2rem;
@@ -25,40 +25,31 @@
 }
 
 #quote-box button{
-  min-width: 12rem;
-  max-width: fit-content;
-  /* Quote Box Button Border Color */
   border: solid var(--dark-color);
   border-radius: 12px;
-  /* Quote Box Button Text Color */
   color: var(--dark-color);
   background-color: var(--light-color);
-  box-shadow: var(--dark-color) 2px 2px 2px ;
-  margin: 1rem 0;
+  box-shadow: var(--dark-color) 2px 2px 2px;
+  text-decoration: none;
+}
+#quote-box a{
+  border: solid var(--dark-color);
+  border-radius: 12px;
+  color: var(--dark-color);
+  background-color: var(--light-color);
+  box-shadow: var(--dark-color) 2px 2px 2px;
+  text-decoration: none;
 }
 
 #quote-box button:hover{
   color: #0d6efd;
 }
-
-a{
-  /* color of tweet Quote Link */
-  color: var(--dark-color);
-  text-decoration: none;
-  border: solid var(--dark-color);
-  border-radius: 12px;
-  background-color: var(--light-color);
-  box-shadow: var(--dark-color) 2px 2px 2px;
-  padding: 0 12px 4px 12px;
+#quote-box a:hover{
+  color: #0d6efd;
 }
+
 
 #author{
   text-align: right;
   padding-bottom: 2rem;
-}
-
-#buttons{
-  display: flex;
-  justify-content: space-between;
-  align-items: baseline;
 }
